[package]
name = "shadow_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ctrlc = "3.4.0"
serde_urlencoded = "0.7"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3"
chrono = "0.4"
flate2 = "1.0"
